fixing overflow on right of page/app

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,8 @@ code {
 .CurrencyConverterTable {
   background-color: #ffa69e;
   border-radius: 10px;
-  padding: 5px;
+  padding: .1em;
+  margin: .2em;
 }
 
 .ExchangeRate {
@@ -110,8 +111,8 @@ code {
   cursor: default;
   border-radius: 25px;
   background-color: #93e1d8;
-  padding: 20px;
-  margin: 10px;
+  padding: .1em;
+  margin: .2em;
   text-align: center;
 }
 
